<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        card_view:cardBackgroundColor="#FFFFFF"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/count"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:text="@string/item"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/rupees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/add_item"
                android:layout_alignLeft="@+id/item"
                android:layout_alignStart="@+id/item"
                android:text="@string/rs"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/rupees"
                android:layout_alignBottom="@+id/rupees"
                android:layout_toEndOf="@+id/rupees"
                android:layout_toRightOf="@+id/rupees"
                android:text="@string/_0"
                android:textSize="15sp" />

            <Button
                android:id="@+id/remove_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/minus" />

            <Button
                android:id="@+id/add_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15sp"
                android:layout_toRightOf="@+id/remove_item"
                android:text="@string/plus"
                tools:ignore="RelativeOverlap"
                android:layout_toEndOf="@+id/remove_item"
                android:layout_marginStart="15sp" />

            <TextView
                android:id="@+id/count"
                android:layout_marginRight="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/_0"
                android:textSize="25sp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>