<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.hrishi.foodin.Order_confirmation">

    <RelativeLayout
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">

        <TextView
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginLeft="100sp"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item"
            android:layout_alignParentStart="true"
            android:layout_marginStart="100sp" />

        <TextView
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price" />

        <TextView
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:layout_marginRight="80sp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="80sp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/item_confirmation_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/details"
        android:layout_gravity="center">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/total_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10sp"
                android:text="@string/total_rs"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/total1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="#000000"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/place_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order"
                android:onClick="order"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
