<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="5"
    android:orientation="vertical"
    tools:context="com.example.hrishi.foodin.Order_bakery">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="4">

        <TextView
            android:id="@+id/canteen_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bakery"
            android:textSize="30sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="5"
            tools:ignore="NestedWeights">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardBackgroundColor="#FFFFFF"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="5dp"
                android:layout_margin="1dp"
                android:focusable="true">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/parathe_ka_swad"
                    android:textSize="15sp"
                    tools:ignore="NestedWeights"
                    android:onClick="order"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:src="@android:drawable/arrow_down_float"
                    tools:ignore="RtlHardcoded" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardBackgroundColor="#FFFFFF"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="5dp"
                android:layout_margin="1dp"
                android:focusable="true">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/chicken_ka_tadka"
                    android:textSize="15sp"
                    android:onClick="order"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:src="@android:drawable/arrow_down_float"
                    tools:ignore="RtlHardcoded" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardBackgroundColor="#FFFFFF"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="5dp"
                android:layout_margin="1dp"
                android:focusable="true">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/majedar_south_indian"
                    android:textSize="15sp"
                    tools:ignore="NestedWeights"
                    android:onClick="order"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:src="@android:drawable/arrow_down_float"
                    tools:ignore="RtlHardcoded" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardBackgroundColor="#FFFFFF"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="5dp"
                android:layout_margin="1dp"
                android:focusable="true">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/ande_ka_swad"
                    android:textSize="20sp"
                    android:onClick="order"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:src="@android:drawable/arrow_down_float"
                    tools:ignore="RtlHardcoded" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardBackgroundColor="#FFFFFF"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="5dp"
                android:layout_margin="1dp"
                android:focusable="true">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/chinese_ka_kamal"
                    android:textSize="15sp"
                    android:onClick="order"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:src="@android:drawable/arrow_down_float"
                    tools:ignore="RtlHardcoded" />
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
